v2.0 bugfixes